--- a/sample-domain/build.gradle
+++ b/sample-domain/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-jdbc"
     compile "org.springframework.boot:spring-boot-starter-json"
 
-    // doma exclude springframework
+    // 도마에서 스프링 프레임워크 배제하기
     annotationProcessor "org.seasar.doma.boot:doma-spring-boot-starter:1.1.1"
     compile("org.seasar.doma.boot:doma-spring-boot-starter:1.1.1") {
         exclude group: "org.springframework.boot"
@@ -61,6 +61,11 @@ dependencies {
     // mysql database
     compile "mysql:mysql-connector-java"
     compile "org.flywaydb:flyway-core"
+
+    // API 문서 자동 생성을 이용하기 위해 추가하는 라이브러리
+    compile "io.springfox:springfox-swagger2:2.6.0"
+    // Swagger UI를 이용하기 위해 추가하는 라이브러리
+    compile "io.springfox:springfox-swagger-ui:2.6.0"
 
     testCompile "org.springframework.boot:spring-boot-starter-test"
     testCompile "org.spockframework:spock-spring:${spockVersion}"
